--- a/MS-ActWatch/MS-ActWatch_without_ew.csproj
+++ b/MS-ActWatch/MS-ActWatch_without_ew.csproj
@@ -5,7 +5,7 @@
     <RootNamespace>MS_ActWatch</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	<Version>1.0.0</Version>
+	<Version>1.0.1</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	<ActWatch_Shared_Version>1.0.0</ActWatch_Shared_Version>
   </PropertyGroup>
@@ -16,7 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="ModSharp.ActWatch.Shared" Version="1.0.0" />
-    <PackageReference Include="ModSharp.AnyBaseLib.Shared" Version="1.0.1" />
+    <PackageReference Include="ModSharp.AnyBaseLibNext.Shared" Version="1.0.1" />
     <PackageReference Include="ModSharp.EntWatch.Shared" Version="1.0.0" />
     <PackageReference Include="ModSharp.Sharp.Modules.ClientPreferences.Shared" Version="2.1.90" />
     <PackageReference Include="ModSharp.Sharp.Modules.LocalizerManager.Shared" Version="2.1.90" />
